--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "moment": "^2.13.0",
+    "moment-mini": "^2.17.2",
     "react-onclickoutside": "^4.8.0",
     "tether": "^1.3.2"
   },
