--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "author": "HackerOne",
   "name": "react-datepicker",
   "description": "A simple and reusable datepicker component for React",
-  "version": "0.34.0",
+  "version": "0.34.1",
   "license": "MIT",
   "homepage": "https://github.com/Hacker0x01/react-datepicker",
   "main": "dist/react-datepicker.min.js",
   "style": "dist/react-datepicker.min.css",
   "files": [
     "*.md",
-    "dist",
-    "lib"
+    "dist/",
+    "lib/",
+    "src/"
   ],
   "keywords": [
     "react",
