--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.34.1",
   "license": "MIT",
   "homepage": "https://github.com/Hacker0x01/react-datepicker",
-  "main": "datepicker.js",
+  "jsnext:main": "datepicker.js",
   "style": "dist/react-datepicker.min.css",
   "files": [
     "*.md",
